# audio-tools-and-effects

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  list_files.sh
docs/revision/: README.md  node_1_12.md
include/atae/delay/: delay_line.h  feedback_delay.h
include/atae/dynamics/: compressor.h  limiter.h
include/atae/envelope/: adsr.h  envelope_follower.h
include/atae/filters/biquad/: biquad_filter.h
include/atae/filters/comb/: comb_filter.h
include/atae/filters/low_pass/: one_pole_lpf.h
include/atae/io/: audio_file.h
include/atae/mixer/: mixer.h
include/atae/noise/: pink_noise.h  white_noise.h
include/atae/oscillators/: oscillator.h  saw_wave.h  sine_wave.h  square_wave.h
include/atae/types/: audio_buffer.h  harmonic.h
src/delay/: delay_line.cpp  feedback_delay.cpp
src/dynamics/: compressor.cpp  limiter.cpp
src/effects/generators/wave/saw/: build.sh  saw_wave.cpp  saw_wave_test.cpp
src/effects/generators/wave/sine/: build.sh  sine_wave.cpp  sine_wave.h  sine_wave_test.cpp  test.sh
src/effects/generators/wave/square/: build.sh  square_wave.cpp  square_wave.h  square_wave_test.cpp
src/effects/generators/white_noise/: build.sh  white_noise.cpp  white_noise.h  white_noise_test.cpp
src/envelope/: adsr.cpp  envelope_follower.cpp
src/filters/biquad/: biquad_filter.cpp
src/filters/comb/: comb_filter.cpp
src/filters/low_pass/: one_pole_lpf.cpp
src/io/: audio_file.cpp
src/mixer/: mixer.cpp
src/noise/: pink_noise.cpp  white_noise.cpp
src/oscillators/: oscillator.cpp  saw_wave.cpp  sine_wave.cpp  square_wave.cpp
src/tools/audio_rw/: audio_file.cpp  audio_file.h  dr_wav.h
src/tools/csv_rw/: csv_writer.h
tests/: CMakeLists.txt
tests/delay/: delay_line_test.cpp  feedback_delay_test.cpp
tests/dynamics/: compressor_test.cpp  limiter_test.cpp
tests/envelope/: adsr_test.cpp  envelope_follower_test.cpp
tests/filters/biquad/: biquad_filter_test.cpp
tests/filters/comb/: comb_filter_test.cpp
tests/filters/low_pass/: one_pole_lpf_test.cpp
tests/mixer/: mixer_test.cpp
tests/noise/: pink_noise_test.cpp  white_noise_test.cpp
tests/oscillators/: saw_wave_test.cpp  sine_wave_test.cpp  square_wave_test.cpp
tools/: csv_writer.cpp
